zerocopy-derive/tests/ui-msrv/union_into_bytes_cfg/union_into_bytes_cfg.stderr
error: use of deprecated trait `Deprecated`
  --> /zerocopy-derive/tests/ui-msrv/union_into_bytes_cfg/union_into_bytes_cfg.rs:29:6
   |
29 | impl Deprecated for Foo {}
   |      ^^^^^^^^^^
   |
note: the lint level is defined here
  --> /zerocopy-derive/tests/ui-msrv/union_into_bytes_cfg/union_into_bytes_cfg.rs:14:9
   |
14 | #![deny(deprecated)]
   |         ^^^^^^^^^^

error: aborting due to previous error

